--- a/coreDataFinal/Base.lproj/Main.storyboard
+++ b/coreDataFinal/Base.lproj/Main.storyboard
@@ -61,11 +61,27 @@
                     <navigationItem key="navigationItem" title="Lugares" id="KvQ-wB-ZHA"/>
                     <connections>
                         <outlet property="tabla" destination="lIU-qa-a4Q" id="rak-gY-aVG"/>
+                        <segue destination="Hhu-jD-Iri" kind="show" identifier="imagenes" id="otW-je-Fs5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1718" y="-295"/>
+        </scene>
+        <!--Imagenes Lugares View Controller-->
+        <scene sceneID="gkD-ls-fS2">
+            <objects>
+                <viewController id="Hhu-jD-Iri" customClass="ImagenesLugaresViewController" customModule="coreDataFinal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4Nd-8K-Trl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="12G-2f-5su"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rse-h0-J1Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2433" y="-296"/>
         </scene>
         <!--Agregar-->
         <scene sceneID="ZSd-Vf-FF7">
@@ -220,4 +236,5 @@
             <point key="canvasLocation" x="981.60000000000002" y="-294.60269865067471"/>
         </scene>
     </scenes>
+    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
