--- a/coreDataFinal/Base.lproj/Main.storyboard
+++ b/coreDataFinal/Base.lproj/Main.storyboard
@@ -75,13 +75,58 @@
                     <view key="view" contentMode="scaleToFill" id="4Nd-8K-Trl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6D7-6C-M7g">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Zch-jX-jGO">
+                                    <size key="itemSize" width="120" height="120"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="F4b-RA-vfW" customClass="ImagenCollectionViewCell" customModule="coreDataFinal" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7qE-ch-lpK">
+                                                    <rect key="frame" x="8" y="8" width="104" height="104"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="7qE-ch-lpK" firstAttribute="top" secondItem="F4b-RA-vfW" secondAttribute="topMargin" id="7Ka-3q-A2t"/>
+                                            <constraint firstItem="7qE-ch-lpK" firstAttribute="leading" secondItem="F4b-RA-vfW" secondAttribute="leadingMargin" id="7pY-lf-pIp"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="7qE-ch-lpK" secondAttribute="bottom" id="YRX-gt-xlI"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="7qE-ch-lpK" secondAttribute="trailing" id="YtZ-ss-WfE"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imagen" destination="7qE-ch-lpK" id="I14-E6-n4s"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6D7-6C-M7g" firstAttribute="leading" secondItem="12G-2f-5su" secondAttribute="leading" id="2uf-W8-fsc"/>
+                            <constraint firstItem="6D7-6C-M7g" firstAttribute="top" secondItem="12G-2f-5su" secondAttribute="top" id="gaZ-ra-QWU"/>
+                            <constraint firstItem="12G-2f-5su" firstAttribute="trailing" secondItem="6D7-6C-M7g" secondAttribute="trailing" id="iAP-lq-DX8"/>
+                            <constraint firstItem="12G-2f-5su" firstAttribute="bottom" secondItem="6D7-6C-M7g" secondAttribute="bottom" id="wLX-pd-GMl"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="12G-2f-5su"/>
                     </view>
+                    <connections>
+                        <outlet property="collection" destination="6D7-6C-M7g" id="YBQ-Rs-hGa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rse-h0-J1Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2433" y="-296"/>
+            <point key="canvasLocation" x="2432.8000000000002" y="-296.40179910044981"/>
         </scene>
         <!--Agregar-->
         <scene sceneID="ZSd-Vf-FF7">
